--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "uuid": "^8.3.1"
   }
 }
