--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app-session",
+    "start": "nodemon app",
     "test": "node app"
   },
   "repository": {
