--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "express-mysql-session": "^2.1.4",
     "express-session": "^1.17.1",
     "fs-extra": "^9.0.1",
-    "http-errors": "^1.7.2",
+    "http-errors": "^1.8.0",
     "moment": "^2.29.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "pug": "^3.0.0",
+    "rotating-file-stream": "^2.1.3",
     "uuid": "^8.3.1"
   }
 }
